ch08: added 6.6 and 6.7 competitions

--- a/engineering_notebook/ch08.html
+++ b/engineering_notebook/ch08.html
@@ -68,7 +68,7 @@
         }
 
         .checklist-table td {
-            padding: 12px;
+            padding: 8px;
             border-bottom: 1px solid #ddd;
         }
 
@@ -174,7 +174,7 @@
         <h3 class="text-teal">一、 比赛策略规划</h3>
 
         <h4>A. 技能挑战赛路线规划</h4>
-        <ul class="notebook-list">
+        <ul>
             <li><strong>专人专项职责：</strong> 严格按照训练分工，确保操作手对相应模块的操作熟练度达到肌肉记忆级别。</li>
             <li><strong>环境点检：</strong> 赛前必须确认 <strong>Pin（销钉）</strong> 的摆放位置是否精准，避免因起始位置微调导致自动路径偏移。</li>
             <li><strong>设备确认：</strong> 确认启动按键（Start Button）反馈是否灵敏。</li>
@@ -183,7 +183,7 @@
         <h4>B. 技能挑战赛规则注意事项</h4>
         <div class="highlight-box type-default" style="background-color: #fff5f5; border-left-color: #e74c3c;">
             <p><strong>核心红线规则：</strong></p>
-            <ul class="notebook-list">
+            <ul>
                 <li>机器人必须接触 <strong>红色三角形得分区 (Red Triangle Goal)</strong>。</li>
                 <li>操作过程中仅允许使用 <strong>红色装填区 (Red Load Zone)</strong>。</li>
             </ul>
@@ -196,7 +196,7 @@
 
         <h3 style="color: #F57F17;">二、 临场策略 (On-field Tactics)</h3>
         <p>赛场瞬息万变，操作手必须内化以下临场准则：</p>
-        <ol class="notebook-list">
+        <ol>
             <li><strong>运动终止：</strong> 必须严格遵守在计时结束的瞬间停止一切运动，避免被判罚违规。</li>
             <li><strong>换手窗口：</strong> 严格遵守预设的换手时间。若在计划时间内未完成既定动作，<strong>应果断提前换手</strong>，为后手留出调整状态的空间。</li>
             <li><strong>冲突避让：</strong> 搭建高塔时若与队友在中心区发生空间冲突，可主动<strong>慢1秒</strong>让对方先完成，确保双方得分效率。</li>
@@ -261,7 +261,7 @@
 
         <div class="highlight-box type-default">
             <h3>赛前突击集训记录 (Oct 18-19)</h3>
-            <ul class="notebook-list">
+            <ul>
                 <li>
                     <strong>问题 A：翻转动作略慢</strong><br>
                     <span class="text-gray">影响：</span> 技能赛时间不够。<br>
@@ -333,7 +333,7 @@
         <div class="two-column-layout">
             <div class="column">
                 <h4>比赛数据</h4>
-                <ul class="notebook-list">
+                <ul>
                     <li><strong>场次：</strong> 共完成 8 场资格赛。</li>
                     <li><strong>最高分：</strong> <span class="text-teal"><strong>277分</strong></span> (联手 683A)。</li>
                     <li><strong>最终排名：</strong> 决赛联手 391A，排名第 17 名。</li>
@@ -345,7 +345,7 @@
 
             <div class="column">
                 <h4>现场体验与突发状况</h4>
-                <ul class="notebook-list">
+                <ul>
                     <li><strong>封闭环境压力：</strong> 首次面对全封闭赛场与“封箱”规则（赛后机器贴封条不可带出），三人团队心理高度紧张。</li>
                     <li><strong>评审抽查：</strong> 参与了第一版工程笔记的评审答辩，被重点考察了零件认知与程序掌握能力。</li>
                     <li><strong>紧急维修：</strong> <span class="text-red">严重故障！</span>
@@ -366,7 +366,7 @@
             <p><strong>现象：</strong> 赛前一晚发现两个核心电机严重发烫，导致功率下降。</p>
             <p><strong>原因：</strong> 高强度连续训练，且缺乏散热机制。</p>
             <p><strong>后果：</strong>
-            <ul class="notebook-list" style="margin-bottom:0;">
+            <ul style="margin-bottom:0;">
                 <li>现场没有备用电机，无法更换。</li>
                 <li>只能购买“速冷气罐”物理降温，被迫中断了关键的赛前练习。</li>
                 <li>比赛全程提心吊胆，存在极大的失控风险。</li>
@@ -442,7 +442,7 @@
         <h3 class="text-teal">二、 整体表现与成绩</h3>
         <div class="two-column-layout">
             <div class="column">
-                <ul class="notebook-list">
+                <ul>
                     <li><strong>手动技能：</strong> 砍下 <strong>184分</strong>，发挥出色。</li>
                     <li><strong>自动技能：</strong> 取得 <strong>91分</strong>，相比此前有巨大进步。</li>
                     <li><strong>最终排名：</strong>
@@ -471,7 +471,7 @@
         <div class="analysis-section">
             <span class="analysis-title text-green">1. 技术升级验证：三代车 (Gen 3) 初现锋芒</span>
             <p>赛前我们紧急将车子升级为<strong>三代车配置</strong>，并优化了全新路线。</p>
-            <ul class="notebook-list">
+            <ul>
                 <li><strong>高塔优化：</strong> 在搭高塔及得分环节进行了针对性改动，准确度提升至近乎 <strong>100%</strong>。</li>
                 <li><strong>效率提升：</strong> 机械结构的优化使得整体运行速度提升了 <strong>2-3秒</strong>，为复杂操作留出了更多冗余时间。</li>
             </ul>
@@ -517,38 +517,270 @@
         </div>
 
     </div>
-    <!-- ================= PAGE 131: 总结与展望 ================= -->
     <div class="sheet">
-        <h1>8.6 总结与未来计划</h1>
+        <h1>8.6 西城区中小学生机器人智能大赛（1）</h1>
 
+        <div class="info-box"
+            style="background: #e3f2fd; padding: 15px; border-left: 5px solid #2196F3; margin-bottom: 20px;">
+            <p><strong>赛事名称：</strong> 2025年西城区中小学生机器人智能大赛</p>
+            <p><strong>时间：</strong> 2025年11月2日（下午）</p>
+            <p><strong>地点：</strong> 北京师范大学附属第二中学（地下体育馆）</p>
+            <p><strong>性质：</strong> 获取北京市小学生机器人智能大赛（市赛）资格</p>
+        </div>
+
+        <h3 class="text-teal">一、 比赛日程 (Timeline)</h3>
+        <table class="checklist-table" style="font-size: 14px; margin-bottom: 20px;">
+            <tr style="background-color: #f9f9f9;">
+                <td width="25%"><strong>12:20 - 12:50</strong></td>
+                <td>全队入场、检录。</td>
+            </tr>
+            <tr>
+                <td><strong>13:00 - 17:30</strong></td>
+                <td>
+                    资格赛 (Qualification Matches)<br>
+                    自动技能赛 (Autonomous Skills)<br>
+                    <!-- <span class="text-gray" style="font-size:12px;">注：比赛在全封闭地下环境进行。</span> -->
+                </td>
+            </tr>
+        </table>
+        <img src="assets/ch08/8_6_1.webp" alt="北京市教委机器人大赛参赛照片"
+            style="display: block;height:300px; margin: 10px auto; border-radius: 10px;">
+
+        <!-- <div class="img-placeholder"
+            style="height: 180px; border: 1px dashed #ccc; background: #fafafa; display: flex; align-items: center; justify-content: center; color: #888; margin-top:10px;">
+            [图片：西城区大赛现场/记分牌] -->
+    </div>
+    <div class="sheet">
+        <h1>8.6 西城区中小学生机器人智能大赛（2）</h1>
+
+        <h3 class="text-teal">二、 赛况表现 (Performance)</h3>
+        <ul style="margin:0">
+            <li><strong>场次：</strong>共完成 6 局积分赛。</li>
+            <li><strong>最佳表现：</strong>与 <strong>Q59联队</strong>配合，总分 <span
+                    class="text-teal"><strong>302分</strong></span>我方贡献194分）。</li>
+            <li><strong>最低低谷：</strong>与 Q83联队配合，因联队失误仅得 163分（队友贡献仅2分）。</li>
+            <li><strong>资格赛结果：</strong>发挥稳定，顺利晋级。</li>
+        </ul>
+
+        <ul style="margin: 0">
+            <li><strong>自动技能：</strong> <strong>91分</strong>。第二场发生失误，未达预期。</li>
+            <li><strong>环境挑战：</strong> 赛场全封闭且屏蔽信号，致团队初期心态慌乱。</li>
+        </ul>
+
+        <!-- <div class="two-column-layout">
+
+
+            <div class="column">
+                <h4>积分赛数据</h4>
+            </div>
+            <div class="column">
+                <h4>技能赛与环境</h4>
+            </div>
+        </div> -->
+        <h3>三、 突发状况与流程漏洞</h3>
+
+        <div class="analysis-section">
+            <span class="analysis-title text-red">1. 外联系统的崩溃</span>
+            <p>本次比赛的外联环节出现了严重的效率问题，导致有局比赛甚至没能联系上队友，被迫在赛台前临时沟通策略。</p>
+            <table class="checklist-table" style="font-size: 13px;">
+                <tr>
+                    <td style="background:#ffebee; width: 22%;"><strong>问题根源</strong></td>
+                    <td style="background:#ffebee;"><strong>具体表现</strong></td>
+                </tr>
+                <tr>
+                    <td>编号系统混淆</td>
+                    <td>第一次遇到外联<strong>不使用战队号</strong>（如2276A），而是必须使用组委会临时的“排序编号”。</td>
+                </tr>
+                <tr>
+                    <td>信息获取滞后</td>
+                    <td>对阵表赛前<strong>仅张贴在公告栏</strong>，未发放纸质版给队员。</td>
+                </tr>
+                <tr>
+                    <td>后果</td>
+                    <td>无法快速定位队友，备赛时间被严重压缩，多场比赛打得非常侥幸。</td>
+                </tr>
+            </table>
+        </div>
+
+    </div>
+
+    <div class="sheet">
+        <h1>8.6 西城区中小学生机器人智能大赛（3）</h1>
+
+        <h3>三、 突发状况与流程漏洞</h3>
+
+        <div class="analysis-section">
+            <span class="analysis-title text-red">1. 外联系统的崩溃</span>
+            <p>本次比赛的外联环节出现了严重的效率问题，导致有局比赛甚至没能联系上队友，被迫在赛台前临时沟通策略。</p>
+            <table class="checklist-table" style="font-size: 13px;">
+                <tr>
+                    <td style="background:#ffebee; width: 30%;"><strong>问题根源</strong></td>
+                    <td style="background:#ffebee;"><strong>具体表现</strong></td>
+                </tr>
+                <tr>
+                    <td>编号系统混淆</td>
+                    <td>第一次遇到外联<strong>不使用战队号</strong>（如2276A），而是必须使用组委会临时的“排序编号”。</td>
+                </tr>
+                <tr>
+                    <td>信息获取滞后</td>
+                    <td>对阵表赛前<strong>仅张贴在公告栏</strong>，未发放纸质版给队员。</td>
+                </tr>
+                <tr>
+                    <td>后果</td>
+                    <td>无法快速定位队友，备赛时间被严重压缩，多场比赛打得非常侥幸。</td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="analysis-section">
+            <span class="analysis-title text-teal">2. 流程与技术教训</span>
+            <ul>
+                <li>
+                    <strong>自动赛衔接事故：</strong>
+                    在手动切换自动模式时，机器放置在航空箱角落，操作不便险些耽误比赛入场。
+                    <br><strong>→ 改进：</strong> 优化候场区的摆放与拿取流程。
+                </li>
+                <li>
+                    <strong>自动程序稳定性：</strong>
+                    只打出91分，且第二场出现失误。
+                    <br><strong>→ 决定：</strong> 必须针对每一个自动环节重新制定严格的训练计划，不再依赖侥幸。
+                </li>
+            </ul>
+        </div>
+
+        <div class="highlight-box type-teal">
+            <strong>阶段性成果：</strong><br>
+            尽管过程惊险，但资格赛发挥稳定，最终成功获得 <strong>北京市机器人智能大赛（市赛）资格</strong>。
+        </div>
+
+    </div>
+    <div class="sheet">
+        <h1>8.7 北京市中小学生机器人智能大赛（1）</h1>
+
+        <div class="info-box"
+            style="background: #e8eaf6; padding: 15px; border-left: 5px solid #3f51b5; margin-bottom: 20px;">
+            <p><strong>赛事名称：</strong> 2025年北京市中小学生机器人智能大赛</p>
+            <p><strong>时间：</strong> 2025年11月15日 - 11月16日</p>
+            <p><strong>地点：</strong> 北京理工大学（良乡校区）</p>
+            <p><strong>性质：</strong> 全市最高级别中小学机器人赛事</p>
+        </div>
+
+        <h3 class="text-teal">一、 比赛日程 (Timeline)</h3>
+        <table class="checklist-table" style="font-size: 14px; margin-bottom: 20px;">
+            <tr style="background-color: #f9f9f9;">
+                <td width="20%"><strong>11.15 (Day 1)</strong></td>
+                <td>
+                    08:00 - 09:00 检录报到、熟悉场地<br>
+                    09:00 - 09:30 开幕式 & 赛前准备<br>
+                    09:30 - 17:30 全天积分赛 (含午休)
+                </td>
+            </tr>
+            <tr>
+                <td><strong>11.16 (Day 2)</strong></td>
+                <td>
+                    09:00 - 09:30 检录 & 准备<br>
+                    09:30 - 17:30 剩余赛程 & 技能赛<br>
+                    17:30 撤离
+                </td>
+            </tr>
+        </table>
+
+        <h3 class="text-teal">二、 赛况表现</h3>
+        <h4>积分赛：高光时刻</h4>
+        <p>得益于赛前明确的桌号分配和充分的候场准备，积分赛发挥极其出色。</p>
+        <ul>
+            <li><strong>最高分：</strong> <span class="text-teal"><strong>310分</strong></span> (联手三里河三小)。</li>
+            <li><strong>最低分：</strong> 186分 (联手陈经纶分校小学部)。</li>
+            <li><strong>排名：</strong> 凭借稳定发挥，斩获 <span class="text-teal" style="font-weight:bold;">小学组第一名</span>。
+            </li>
+        </ul>
+    </div>
+
+    <div class="sheet">
+        <h1>8.7 北京市中小学生机器人智能大赛（2）</h1>
+        <h3 class="text-teal">二、 赛况表现（续）</h3>
+
+        <h4>技能赛：至暗时刻</h4>
+        <p>两场全败</p>
         <p>
-            北京校际联赛的成绩（排名 14）虽然未达夺冠预期，但二代车展现出的工程进步是令人振奋的。针对暴露出的问题，我们制定了备战“北京市教委赛”的改进计划。
+            1. <strong>进错程序：</strong> 第一场选错代码槽位，直接导致零分。<br>
+            2. <strong>心态崩盘：</strong> 首场失利导致第二天畏难情绪严重，第二场操作变形再次失误。
         </p>
 
-        <h3>后续改进方向 (Future Plan)</h3>
+        <div class="strategy-card" style="margin-top: 10px; background-color: #fff3e0; border-left-color: #ff9800;">
+            <h4 style="margin-top: 0; color: #e65100;">最终成绩：三等奖</h4>
+            <p>虽然积分赛排名<strong>第一</strong>，但由于自动技能赛的重大失误，总成绩被严重拖累，遗憾仅获三等奖。这是对“木桶效应”最惨痛的验证。</p>
+        </div>
+        <img src="assets/ch08/8_7_1.webp" alt="赛前检查清单"
+            style="display: block;height:280px; margin: 10px auto; border-radius: 10px;">
+
+
+    </div>
+    <div class="sheet">
+        <h1>8.7 北京市中小学生机器人智能大赛（3）</h1>
+        <h3 class="text-red">三、 深度复盘与教训 (Post-Match Analysis)</h3>
+
+        <div class="analysis-section">
+            <span class="analysis-title text-red">1. 自动赛的系统性崩盘</span>
+            <p>连续三场大赛（华北、西城、北京）均在自动赛环节掉链子，暴露出深层问题：</p>
+            <ul>
+                <li><strong>训练缺失：</strong> 自动赛未得到应有的重视，已成为团队的“阿喀琉斯之踵”。</li>
+                <li><strong>流程混乱：</strong> 赛场上未执行预设分工，出现了严重的协作失误。</li>
+                <li><strong>细节粗糙：</strong> 手动转自动（Switching）环节磨合不够，<strong>Pin的摆放</strong>精度不足，直接影响机器运行轨迹。</li>
+            </ul>
+        </div>
+
+        <div class="analysis-section">
+            <span class="analysis-title text-teal">2. 机械隐患发现</span>
+            <ul>
+                <li><strong>掉件问题：</strong> 在两局比赛中，机器在执行“先手后翻”动作时均出现了<strong>掉Pin</strong>现象。</li>
+                <li><strong>对策：</strong> 赛后需立即检查夹持机构的力度与翻转结构的平稳性。</li>
+            </ul>
+        </div>
+
+        <div class="highlight-box type-teal" style="font-size: 22px;">
+            <strong>心态调节经验：</strong><br>
+            值得肯定的是，尽管第一天技能赛失利严重打击了士气，但团队经过一晚的调整，第二天在积分赛中依然打出了高水平表现。这种<strong>“触底反弹”</strong>的心理韧性是本次比赛宝贵的收获。
+        </div>
+
+    </div>
+
+    <div class="sheet">
+        <h1>8.8 本章总结与未来计划</h1>
+
+        <p>
+            从石家庄的硬件故障，到西城区的流程混乱，再到北京市赛的“偏科”惨剧。第八章记录了二代车在动荡中成长的全过程。
+        </p>
+
+        <h3>后续改进方向 (Action Plan)</h3>
         <div class="highlight-box type-teal">
-            <p><strong>基于 11月8-9日 总结的行动清单：</strong></p>
-            <ol class="notebook-list">
+            <p><strong>基于连续失利的痛定思痛：</strong></p>
+            <ol>
                 <li>
-                    <strong>路径优化 (Path Planning)：</strong>
+                    <strong>自动赛特训：</strong>
+                    今后的训练重心必须彻底倾斜。不再依靠手动赛的优势来掩盖自动赛的短板。<strong>目标：</strong> 形成肌肉记忆般的自动程序启动流程。
+                </li>
+                <li>
+                    <strong>路径优化：</strong>
                     针对三角区进入慢的问题，计划采用<strong>“贴边直线送入”</strong>策略。即两点直线距离最短，车子前端准确贴边，快速送Pin，减少微调时间。
                 </li>
                 <li>
-                    <strong>底盘参数微调 (PID Tuning)：</strong>
+                    <strong>底盘参数微调：</strong>
                     针对漂移问题，将重新调整电机的速度与刹车参数，牺牲极少量的极速换取更强的抓地力。
                 </li>
                 <li>
-                    <strong>扣Pin柔性化：</strong>
-                    尝试在程序中减小自动扣Pin的瞬时功率，或者在机械结构上增加缓冲，解决“震荡掉件”问题。
+                    <strong>扣 Pin 柔性化：</strong>
+                    尝试在程序中减小自动扣 Pin 的瞬时功率，或者在机械结构上增加缓冲，解决“震荡掉件”问题。
                 </li>
             </ol>
         </div>
 
-        <p style="margin-top: 40px; text-align: center; font-weight: bold; color: #555;">
+        <p style="font-size: 30px;margin-top: 40px; text-align: center; font-weight: bold; color: #555;">
             持续改进，永不止步。<br>
         </p>
 
     </div>
+
     <script src="assets/scripts/toggle-buttons.js"></script>
     <script src="assets/scripts/common-elements.js"></script>
     <script src="assets/scripts/navigation-button.js"></script>
