ch08: updated chapter cover

--- a/engineering_notebook/ch08.html
+++ b/engineering_notebook/ch08.html
@@ -131,40 +131,39 @@
     <div class="sheet">
         <div class="cover-section">
             <h1 style="font-size: 56px;">策略与复盘</h1>
-            <h2>第八章：战术规划与北京校际联赛分析</h2>
-            <h3>Chapter 8: Strategy Planning & Match Analysis</h3>
+            <h2>第八章：赛季中期关键赛事与策略复盘</h2>
+            <h3>Chapter 8: Mid-Season Competitions & Strategy Review</h3>
 
             <div class="cover-divider"></div>
 
-            <!-- <div class="cover-intro">
-                <p><strong>赛事背景：</strong> 2025-2026赛季VEX机器人北京首届校际联赛</p>
-                <p><strong>参赛机型：</strong> 二代车 (Gen 2)</p>
-                <p><strong>核心任务：</strong> 验证改进后的机械结构在实战策略中的有效性，并收集数据进行下一轮优化。</p>
-            </div> -->
-
-            <table style="width: 80%;margin: 0 auto;border-collapse: collapse;border: none;">
-
+            <table style="width: 85%;margin: 0 auto;border-collapse: collapse;border: none;">
                 <tbody>
                     <tr>
-                        <td width="25%" style="border: none;"><strong>赛事背景：</strong></td>
-                        <td style="border: none;">2025-2026赛季<br>VEX机器人北京首届校际联赛</td>
+                        <td width="25%" style="border: none; vertical-align: top;"><strong>赛事周期：</strong></td>
+                        <td style="border: none;">
+                            2025年10月 - 11月密集赛季<br>
+                            <span style="font-size: 0.9em; color: #666;">(华北大区赛 / 北京校际联赛 / 西城区赛 / 北京市赛)</span>
+                        </td>
                     </tr>
                     <tr>
                         <td style="border: none;"><strong>参赛机型：</strong></td>
                         <td style="border: none;">二代车 (Gen 2)</td>
                     </tr>
                     <tr>
-                        <td style="border: none;"><strong>核心任务：</strong></td>
-                        <td style="border: none;">验证改进后的机械结构在实战策略中的有效性，并收集数据进行下一轮优化。</td>
+                        <td style="border: none; vertical-align: top;"><strong>核心任务：</strong></td>
+                        <td style="border: none;">
+                            1. 验证二代车在封闭高压环境下的实战稳定性。<br>
+                            2. 争取上海交大国赛及北京市赛的晋级资格。<br>
+                            3. 收集实战数据，启动针对自动赛短板的三代车迭代。
+                        </td>
                     </tr>
                 </tbody>
             </table>
 
-            <div class="sticky-note">
+            <!-- <div class="sticky-note">
                 <strong>本章摘要：</strong><br>
-                本章记录二代车在北京校际联赛中的战术部署与表现。<br>
-                数据表明，二代车的得分效率显著提升，但在复杂场景下的适应性仍需优化。
-            </div>
+                本章记录了战队在赛季中期四大核心赛事中的征程。虽然在积分赛中多次斩获高分并成功晋级，但频发的硬件故障与自动赛失误暴露了系统性短板，促使团队做出了全面转向自动化特训的战略决策。
+            </div> -->
         </div>
     </div>
     <div class="sheet">
@@ -255,12 +254,12 @@
 
     <!-- ================= PAGE 128: 赛前准备 ================= -->
     <div class="sheet">
-        <h1>8.3 赛前集训与检查 (Pre-Match)</h1>
+        <h1>8.3 赛前集训与检查</h1>
 
-        <p>赛前一周（10月18-19日），我们在叶恒瑞家中进行了高强度的针对性集训，重点解决了《训练记录》中暴露出的隐患。</p>
+        <p>赛前一周，我们在叶恒瑞家中进行了高强度的针对性集训，重点解决了《训练记录》中暴露出的隐患。</p>
 
         <div class="highlight-box type-default">
-            <h3>赛前突击集训记录 (Oct 18-19)</h3>
+            <h3>赛前突击集训记录</h3>
             <ul>
                 <li>
                     <strong>问题 A：翻转动作略慢</strong><br>
