hard-code footer date into common-elements.js

--- a/engineering_notebook/ch08.html
+++ b/engineering_notebook/ch08.html
@@ -606,30 +606,8 @@
     <div class="sheet">
         <h1>8.6 西城区中小学生机器人智能大赛（3）</h1>
 
-        <h3>三、 突发状况与流程漏洞</h3>
+        <h3>三、 突发状况与流程漏洞（续）</h3>
 
-        <div class="analysis-section">
-            <span class="analysis-title text-red">1. 外联系统的崩溃</span>
-            <p>本次比赛的外联环节出现了严重的效率问题，导致有局比赛甚至没能联系上队友，被迫在赛台前临时沟通策略。</p>
-            <table class="checklist-table" style="font-size: 13px;">
-                <tr>
-                    <td style="background:#ffebee; width: 30%;"><strong>问题根源</strong></td>
-                    <td style="background:#ffebee;"><strong>具体表现</strong></td>
-                </tr>
-                <tr>
-                    <td>编号系统混淆</td>
-                    <td>第一次遇到外联<strong>不使用战队号</strong>（如2276A），而是必须使用组委会临时的“排序编号”。</td>
-                </tr>
-                <tr>
-                    <td>信息获取滞后</td>
-                    <td>对阵表赛前<strong>仅张贴在公告栏</strong>，未发放纸质版给队员。</td>
-                </tr>
-                <tr>
-                    <td>后果</td>
-                    <td>无法快速定位队友，备赛时间被严重压缩，多场比赛打得非常侥幸。</td>
-                </tr>
-            </table>
-        </div>
 
         <div class="analysis-section">
             <span class="analysis-title text-teal">2. 流程与技术教训</span>
@@ -646,11 +624,9 @@
                 </li>
             </ul>
         </div>
+        <h3>四、 比赛结果</h3>
 
-        <div class="highlight-box type-teal">
-            <strong>阶段性成果：</strong><br>
-            尽管过程惊险，但资格赛发挥稳定，最终成功获得 <strong>北京市机器人智能大赛（市赛）资格</strong>。
-        </div>
+            <p>尽管过程惊险，但资格赛发挥稳定，最终成功获得 <strong>北京市机器人智能大赛（市赛）资格</strong>。</p>
 
     </div>
     <div class="sheet">
@@ -781,8 +757,8 @@
     </div>
 
     <script src="assets/scripts/toggle-buttons.js"></script>
-    <script src="assets/scripts/common-elements.js"></script>
     <script src="assets/scripts/navigation-button.js"></script>
+    <script src="assets/scripts/common-elements.js"></script>
 </body>
 
 </html>
