index and ch01: added pictures

--- a/engineering_notebook/index.html
+++ b/engineering_notebook/index.html
@@ -27,9 +27,9 @@
     <!-- ================= PREFACE ================= -->
     <div class="sheet">
         <h1>前言</h1>
-        <div class="img-placeholder" style="height: 300px; margin-top: 30px;margin-bottom: 30px;">
-            <!-- Placeholder for a team photo or other image -->
-        </div>
+        <img src="assets/ch00/preface.webp" style="width: 100%;margin:30px auto;display: block;border-radius: 10px;">
+
+        <!-- Placeholder for a team photo or other image -->
         <p>尊敬的评委老师们：</p>
         <p>工程笔记是我们学习机器人重要环节，它记录了我们搭建细节、创新探索、参赛经验与复盘反思。见证了团队成长的历程，每一页都展示了大家的努力与协作。是凝聚力的见证，是我们成长的足迹，更是逐梦赛场的初心。</p>
         <p>万分感谢您们的审阅，希望能得到评审老师的宝贵建议及指导，助力我们在VEX学习、探索的道路上稳步前行。</p>
