ch02: removed version number from research object line

--- a/engineering_notebook/ch02.html
+++ b/engineering_notebook/ch02.html
@@ -24,7 +24,7 @@
             <div style="width: 80%; height: 8px; background: #FF9F43; margin: 40px auto; border-radius: 5px;"></div>
 
             <div style="text-align: left; margin: 30px 80px; font-size: 20px; line-height: 2;">
-                <p style="margin-top: 10px;"><span class="chinese-label">研究对象：</span> Mix & Match 游戏手册 (v2.2)</p>
+                <p style="margin-top: 10px;"><span class="chinese-label">研究对象：</span> Mix & Match 游戏手册</p>
                 <p style="margin-top: 10px;"><span class="chinese-label">研究员：</span> 机甲梦想家全体成员</p>
                 <p style="margin-top: 10px;"><span class="chinese-label">最重大的发现：</span> Beam (梁) 竟然是分数倍增器！</p>
             </div>
