index: updated ToC

--- a/engineering_notebook/index.html
+++ b/engineering_notebook/index.html
@@ -75,7 +75,7 @@
                 <li style="margin: 5px 0;"><strong><a href="ch03.html">第三章：我们的小小科学家之路</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
                         <li style="margin: 5px 0;">3.1 STEM 是什么？</li>
-                        <li style="margin: 5px 0;">3.2 “边界”中的自由 (Constraints)</li>
+                        <li style="margin: 5px 0;">3.2 “边界”中的自由</li>
                         <li style="margin: 5px 0;">3.3 机械魔法</li>
                         <li style="margin: 5px 0;">3.4 让机器人变聪明</li>
                     </ul>
@@ -93,16 +93,14 @@
             <ul
                 style="font-size: 18px; line-height: 1.4; list-style-type: none; padding: 0; width: fit-content; min-width: 50%;">
 
-
-
                 <!-- Chapter 4 -->
                 <li style="margin: 5px 0;"><strong><a href="ch04.html">第四章：概念设计与方案研讨</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
                         <li style="margin: 5px 0;">4.1 竞赛规则分析与功能定义</li>
                         <li style="margin: 5px 0;">4.2 系统架构与模块划分</li>
                         <li style="margin: 5px 0;">4.3 备选方案评估与淘汰</li>
-                        <li style="margin: 5px 0;">4.4 一代车设计定稿 (Final Design)</li>
-                        <li style="margin: 5px 0;">4.5 预设比赛策略 (Initial Strategy)</li>
+                        <li style="margin: 5px 0;">4.4 一代车设计定稿</li>
+                        <li style="margin: 5px 0;">4.5 预设比赛策略</li>
                     </ul>
                 </li>
 
@@ -114,7 +112,7 @@
                         <li style="margin: 5px 0;">5.3 机械装配：操作臂与气动抓手</li>
                         <li style="margin: 5px 0;">5.4 系统集成与布线工艺</li>
                         <li style="margin: 5px 0;">5.5 软件配置：设备初始化</li>
-                        <li style="margin: 5px 0;">5.6 遥控逻辑设计 (Teleop)</li>
+                        <li style="margin: 5px 0;">5.6 遥控逻辑设计</li>
                         <li style="margin: 5px 0;">5.7 传感器集成与自动化测试</li>
                     </ul>
                 </li>
@@ -143,29 +141,32 @@
             <ul
                 style="font-size: 18px; line-height: 1.4; list-style-type: none; padding: 0; width: fit-content; min-width: 50%;">
 
-
-
                 <!-- Chapter 7 -->
                 <li style="margin: 5px 0;"><strong><a href="ch07.html">第七章：二代车的设计迭代</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
-                        <li style="margin: 5px 0;">7.1 迭代启动：从经验中改进</li>
-                        <li style="margin: 5px 0;">7.2 机械优化一：底盘传动结构重构</li>
-                        <li style="margin: 5px 0;">7.3 机械优化二：三角区定位角改进</li>
-                        <li style="margin: 5px 0;">7.4 机械优化三：面状辅助堆叠系统</li>
-                        <li style="margin: 5px 0;">7.5 二代车训练与调试记录</li>
-                        <li style="margin: 5px 0;">7.6 软件升级：传感器融合</li>
-                        <li style="margin: 5px 0;">7.7 实战检验：北京校际联赛</li>
+                        <li style="margin: 5px 0;">7.1 迭代启动：针对1.0痛点的改进方案</li>
+                        <li style="margin: 5px 0;">7.2 机械优化一：底盘通过性与运动控制</li>
+                        <li style="margin: 5px 0;">7.3 机械优化二：一体化抓取与勾取系统</li>
+                        <li style="margin: 5px 0;">7.4 机械优化三：抬升结构调试与高度冗余优化</li>
+                        <li style="margin: 5px 0;">7.5 机械优化四：三角区气动定位角系统</li>
+                        <li style="margin: 5px 0;">7.6 程序优化：一键调整连贯动作</li>
+                        <li style="margin: 5px 0;">7.7 二代车迭代训练记录</li>
+                        <li style="margin: 5px 0;">7.8 二代车核心零件清单</li>
+                        <li style="margin: 5px 0;">7.9 性能测试与最终调试总结</li>
                     </ul>
                 </li>
 
                 <!-- Chapter 8 -->
                 <li style="margin: 5px 0;"><strong><a href="ch08.html">第八章：比赛策略与赛后分析</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
-                        <li style="margin: 5px 0;">8.1 战术规划：基于二代车特性的策略</li>
-                        <li style="margin: 5px 0;">8.2 赛前准备与检查 (Pre-Match)</li>
-                        <li style="margin: 5px 0;">8.3 比赛记录：北京校际联赛</li>
-                        <li style="margin: 5px 0;">8.4 赛后技术复盘 (Post-Match Analysis)</li>
-                        <li style="margin: 5px 0;">8.5 总结与未来计划</li>
+                        <li style="margin: 5px 0;">8.1 一般策略规划</li>
+                        <li style="margin: 5px 0;">8.2 基于二代车特性的策略</li>
+                        <li style="margin: 5px 0;">8.3 赛前集训与检查</li>
+                        <li style="margin: 5px 0;">8.4 亚洲公开赛华北大区赛</li>
+                        <li style="margin: 5px 0;">8.5 北京校际联赛</li>
+                        <li style="margin: 5px 0;">8.6 西城区中小学生机器人智能大赛</li>
+                        <li style="margin: 5px 0;">8.7 北京市中小学生机器人智能大赛</li>
+                        <li style="margin: 5px 0;">8.8 本章总结与未来计划</li>
                     </ul>
                 </li>
             </ul>
@@ -175,6 +176,8 @@
 
     <!-- <script src="assets/scripts/common-elements.js"></script> -->
     <script src="assets/scripts/navigation-button.js"></script>
+    <script src="assets/scripts/toggle-buttons.js"></script>
+
 </body>
 
 </html>
